--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/bricks-online/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>Bricks &middot; Sinfores SX</title>
@@ -11,9 +11,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800;900&display=swap" rel="stylesheet">
-  <script type="module" crossorigin src="/assets/index.5e33f971.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.7e93ed9c.js">
-    <link rel="stylesheet" href="/assets/index.48857a10.css">
+  <script type="module" crossorigin src="/bricks-online/assets/index.5e33f971.js"></script>
+    <link rel="modulepreload" href="/bricks-online/assets/vendor.7e93ed9c.js">
+    <link rel="stylesheet" href="/bricks-online/assets/index.48857a10.css">
   </head>
 
 <body>
